# SOFA-PLUGINS

ext_plugin_repo/: CMakeLists.txt
ext_plugin_repo/ModelOrderReduction/MORresults/debug/: debug_scene.py
ext_plugin_repo/ModelOrderReduction/python/mor/gui/: utility.py
ext_plugin_repo/ModelOrderReduction/python/mor/reduction/: __init__.py  reduceModel.py
ext_plugin_repo/ModelOrderReduction/python/mor/reduction/container/: __init__.py  packageBuilder.py
ext_plugin_repo/ModelOrderReduction/python/mor/reduction/script/: ConvertRIDinActiveNodes.py  ReadGieFileAndComputeRIDandWeights.py  ReadMechanicalMatricesAndComputeVibrationModes.py  ReadStateFilesAndComputeModes.py  __init__.py  prepareStateFiletoDisplayModes.py
ext_plugin_repo/ModelOrderReduction/python/mor/utility/: writeScene.py
ext_plugin_repo/ModelOrderReduction/tools/: modelOrderReduction (copy).py  modelOrderReduction.ipynb  modelOrderReduction.py
ext_plugin_repo/ModelOrderReduction/tools/MOR_Results/debug/: debug_scene.py
ext_plugin_repo/ModelOrderReduction/tools/debug/: debug_scene.py
ext_plugin_repo/ModelOrderReduction/tools/debug/debug/: debug_scene.py
